Small fix for toggling button style on mobile.

--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ input[type=text], [type=number] {
 }
 
 #rebootControls {
-    width: 90%;
-    margin: 15px auto;
+    width: 100%;
+    margin: 15px 0;
 }
 
 #rebootControls button {
@@ -146,7 +146,6 @@ input[type=text], [type=number] {
 
 .rebootBtn {
     background-color: RGB(255,69,58);
-    filter: brightness(50%);
     color: white;
     font-size: 22px;
     border-radius: 5px;
